--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@v2
     - name: Checkout manifest repo
-      uses: ./action.yaml
+      uses: ./
       with:
         name: 'application.yaml'
         srcRevision: 'develop'
