--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "Apache License v2",
   "bugs": {
     "url": "https://github.com/nautible/nautible-actions-argocd-changetarget/issues"
   },
