--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -3,7 +3,9 @@ name: Release Preparation
 on:
   pull_request:
     branches:
-      - *
+      - main
+      - develop
+      - release/*
     types: [closed]
 
 jobs:
