--- a/examples/pullrequest.yml
+++ b/examples/pullrequest.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
     - name: Checkout repo
       uses: actions/checkout@v2
-    - name: Checkout manifest repo
+    - name: Change targetRevision
       uses: ./
       with:
         name: 'application.yaml'
