--- a/examples/releasebranch.yml
+++ b/examples/releasebranch.yml
@@ -14,7 +14,7 @@ jobs:
       run: echo '${{ toJSON(github) }}'
     - name: Checkout repo
       uses: actions/checkout@v2
-    - name: Checkout manifest repo
+    - name: Change targetRevision
       uses: ./
       with:
         name: 'application.yaml'
