--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,22 +1,18 @@
 name: Release Preparation
 
 on:
-  pull_request:
-    branches:
-      - main
-      - develop
-      - release/*
-    types: [closed]
-
+  push:
+    branches:    
+      - 'feature/*'
 jobs:
   build:
     runs-on: ubuntu-latest
     env:
       OWNER: $ {{ github.repository_owner }}
-      SRC_BRANCH: ${{ github.head_ref }}
-      DEST_BRANCH: ${{ github.base_ref }}
-    if: github.event.pull_request.merged == true
+      DEST_BRANCH: ${{ github.ref }}
     steps:
+    - name: log
+      run: echo '${{ toJSON(github) }}'
     - name: Checkout repo
       uses: actions/checkout@v2
     - name: Change targetRevision
@@ -24,5 +20,5 @@ jobs:
       with:
         name: 'application.yaml'
         repository: ${{ env.OWNER }}
-        srcRevision: ${{ env.SRC_BRANCH }}
-        DestRevision: ${{ env.DEST_BRANCH }}
+        srcRevision: 'feature/init'
+        destRevision: ${{ env.DEST_BRANCH }}
