--- a/examples/pullrequest_noSrc.yml
+++ b/examples/pullrequest_noSrc.yml
@@ -22,5 +22,5 @@ jobs:
       uses: ./
       with:
         name: 'application.yaml'
-        repository: ${{ env.OWNER }}
+        owner: ${{ env.OWNER }}
         DestRevision: ${{ env.DEST_BRANCH }}
