--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -23,6 +23,6 @@ jobs:
       uses: ./
       with:
         name: 'application.yaml'
-        repository: ${{ env.OWNER }}
+        owner: ${{ env.OWNER }}
         srcRevision: ${{ env.SRC_BRANCH }}
         DestRevision: ${{ env.DEST_BRANCH }}
