--- a/.github/workflows/releasebranch.yml
+++ b/.github/workflows/releasebranch.yml
@@ -19,5 +19,5 @@ jobs:
       uses: ./
       with:
         name: 'application.yaml'
-        repository: ${{ env.OWNER }}
+        owner: ${{ env.OWNER }}
         destRevision: ${{ env.DEST_BRANCH }}
