--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,5 +20,5 @@ jobs:
       with:
         name: 'application.yaml'
         owner: ${{ env.OWNER }}
-        srcRevision: 'develop'
+#        srcRevision: 'develop'
         destRevision: ${{ env.DEST_BRANCH }}
