--- a/.github/workflows/releasebranch.yml
+++ b/.github/workflows/releasebranch.yml
@@ -20,4 +20,5 @@ jobs:
       with:
         name: 'application.yaml'
         owner: ${{ env.OWNER }}
+        srcRevision: 'develop'
         destRevision: ${{ env.DEST_BRANCH }}
