--- a/examples/pullrequest_no_src.yml
+++ b/examples/pullrequest_no_src.yml
@@ -1,21 +1,18 @@
 name: Release Preparation
 
 on:
-  pull_request:
-    branches:
-      - main
-      - develop
-      - release/*
-    types: [closed]
-
+  push:
+    branches:    
+      - 'release/*'
 jobs:
   build:
     runs-on: ubuntu-latest
     env:
       OWNER: ${{ github.repository_owner }}
-      DEST_BRANCH: ${{ github.base_ref }}
-    if: github.event.pull_request.merged == true
+      DEST_BRANCH: ${{ github.ref }}
     steps:
+    - name: log
+      run: echo '${{ toJSON(github) }}'
     - name: Checkout repo
       uses: actions/checkout@v2
     - name: Change targetRevision
